--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,8 @@ h3 {
 }
 p {
     font-size: 16pt;
-    color: gainsboro;    
+    color: gainsboro;  
+    margin-right: 2em;  
 }
 #footer {
     border-top: 1px solid #d5d5d5;
@@ -68,8 +69,6 @@ ul.posts {
     font-size: 1.5em;
     color: seashell;    
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-
-    
 }
 
 ul.posts li {
